--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,22 +1,24 @@
 body{
   background: indigo;
 }
-.App {
-  text-align: center;
-}
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 50px;
 }
 
 .App-header {
   background-color: #222;
   height: 50px;
   padding: 20px;
+  font-size: xx-large;
   color: white;
+  transition: text-shadow 2s;
+  text-shadow: 0px 0px 10px rgba(255,255,255,0.6), 0px 0px 30px rgba(255,255,255,0.4), 0px 0px 50px rgba(255,255,255,0.3), 0px 0px 180px rgba(255,255,255,0.3);
+  color: rgba(255,255,255,0);
 }
-
+.App-header:hover {
+  text-shadow: 0 0 1px rgba(255,255,255,.6);
+}
 .App-intro {
   font-size: large;
 }
