--- a/src/App/Canvas/canvas.css
+++ b/src/App/Canvas/canvas.css
@@ -1,11 +1,26 @@
-.foggy{
-    background: black;
+.frame{
+    background-image: url('./wooden-frame.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     padding: 1em;
-    
-    margin: 1em;
+    max-width: 39em;
+    margin: auto;
+    margin-top: 1em;
+    border-radius: 1em;
+    z-index: 1;
+}
+
+canvas{
+    width: 100%;
+    z-index: 5;
+    border-radius: 1em;
 }
 #dots-inBoxes{
-    background: gray;
+    background: cadetblue;
+    opacity: 0.6;
     display: block;
     margin: auto;
+    
 }
