--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,63 +1,102 @@
-body{
-  background: #245;
+.App {
+  text-align: center;
 }
-.App{
-  max-width: 800px;
-  margin:0 auto;
-}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 50px;
+  height: 60px;
 }
-
-.App-header {
-  background:#eaeaea;
-
-  position:fixed;
-  width:100vw;  
-}
-.App-header .nav-toggle{
-    text-decoration:none;
-    padding:0.5em;
-    display:inline-block;
-    position:relative;
-    background: #0a3;
-    color: #fff;
-    text-align:right;
-    line-height: 27px;
-    transition: text-shadow 2s;
-    text-shadow: 0px 0px 10px rgba(255,255,255,0.6), 0px 0px 30px rgba(255,255,255,0.4), 0px 0px 50px rgba(255,255,255,0.3), 0px 0px 180px rgba(255,255,255,0.3);
-    color: rgba(255,255,255,0);
-}
-@media screen and (min-width:450px){
-    display:block;
-    position:inherit;
-    background:none;
-    .trigger{
-      display:none;
-    }
-}
-    
-.App-header:hover {
-  text-shadow: 0 0 1px rgba(255,255,255,.6);
-}
-.App-body {
-  font-size: large;
-}
-.App-footer{
-  background-color: #222;
-  height: 25px;
-  font-size: large;
-  color: white;
-  transition: text-shadow 2s;
-  text-shadow: 0px 0px 10px rgba(255,255,255,0.6), 0px 0px 30px rgba(255,255,255,0.4), 0px 0px 50px rgba(255,255,255,0.3), 0px 0px 180px rgba(255,255,255,0.3);
-  color: rgba(255,255,255,0);
-}
-.App-footer:hover {
-  text-shadow: 0 0 1px rgba(255,255,255,.6);
-}
-
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.App-header {
+  background-color: black;
+  height: 50px;
+  padding: 20px;
+  color: white;
+}
+.App-header .nav-toggle { 
+  text-decoration: none; 
+  padding: 0.5em; 
+  display: inline-block; 
+  position: relative; 
+  background: #0a3; 
+  color: #fff; 
+  text-align: right; 
+  line-height: 27px; 
+}
+ 
+.App-header .nav-toggle:hover ul { 
+  display: block; 
+} 
+.App-header ul { 
+  margin: 0; 
+  padding: 0; 
+  list-style: none; 
+  display: none; 
+  position: absolute; 
+  background: #00aa33; 
+  z-index: 10; right: 0; 
+  min-width: 50vw; 
+} 
+
+.App-header ul li { 
+  padding: 0.5em; 
+  text-align: left; 
+} 
+
+.App-body {
+  font-size: large;
+  position: absolute;
+  
+  height: 80vh;
+
+}
+.App-footer { 
+  background: #222; 
+  color: #f9f9f9; 
+  padding: 0 2em; 
+}
+
+@media screen and (min-width: 450px) { 
+  .App {
+    text-align: none;
+  }
+  .App-header .nav-toggle { 
+    display: block; 
+    position: inherit; 
+    background: none; 
+  } 
+  .App-header .nav-toggle .trigger { 
+    display: none; 
+  } 
+  .App-header ul { 
+    display: block; 
+    position: inherit; 
+    background: none; 
+    z-index: 0; 
+    right: auto; 
+    min-width: none; 
+  } 
+  .App-header ul li { 
+    display: inline-block; 
+    color: #000; 
+  } 
+}
+
+@media screen and (min-width: 550px) { 
+  .App-body .img-focas { 
+    width: 100%; 
+    margin: 0; 
+  } 
+}
+
+@media screen and (min-width: 800px) { 
+  .App-body .img-focas { 
+    width: 33%; 
+    float: left; 
+    margin: 0 2em 1em 0; 
+  } 
+} 
