--- a/src/Canvas/canvas.css
+++ b/src/Canvas/canvas.css
@@ -16,7 +16,7 @@ canvas{
     z-index: 5;
     border-radius: 1em;
 }
-#dots-inBoxes{
+.dots-inBoxes{
     background: cadetblue;
     opacity: 0.6;
     display: block;
