--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,5 +1,13 @@
+body{
+  background-color: black;
+  min-height: 530px;
+}
 .App {
   text-align: center;
+  height: 100%; 
+  min-height: 530;
+  background-image: url('./wooden-frame.jpg');
+  background-position: center;
 }
 
 .App-logo {
@@ -12,30 +20,38 @@
 }
 
 .App-header {
-  background-color: black;
-  height: 50px;
-  padding: 20px;
-  color: white;
+  background-color: #333;
+  height: 60px;
 }
-.trigger a{
-  text-decoration: none;
+.nav-toggle{
+  width: 100vw;
+  text-align: center;
+  position: absolute;
   
+}
+.nav-toggle span{
+  
+}
+.nav-toggle li{
+  display: none;
+}
+
+.trigger{
+  color: greenyellow;  
 }
 
 .App-body {
   font-size: large;
-  position: absolute;
-  min-height: 100%;
-  margin-bottom: 50px
+  height: 80vh; 
+  margin-bottom: 0px;
 }
 .App-footer {
-  background: #222; 
-  height: 50px;
-  color: #f9f9f9; 
-  padding: 0 2em; 
+  background-color: black;
+  color: ghostwhite;
+  display: block;
 }
 
-@media screen and (min-width: 450px) { 
+/*@media screen and (min-width: 450px) { 
   .App {
     text-align: left;
   }
@@ -59,19 +75,19 @@
     display: inline-block; 
     color: #000; 
   } 
-}
+}*/
 
-@media screen and (min-width: 550px) { 
+/*@media screen and (min-width: 550px) { 
   .App-body .img-focas { 
     width: 100%; 
     margin: 0; 
   } 
-}
+}*/
 
-@media screen and (min-width: 800px) { 
+/*@media screen and (min-width: 800px) { 
   .App-body .img-focas { 
     width: 33%; 
     float: left; 
     margin: 0 2em 1em 0; 
   } 
-} 
+} */
