semblince of working

--- a/src/Canvas/canvas.css
+++ b/src/Canvas/canvas.css
@@ -1,4 +1,4 @@
-.frame{
+/*.frame{
     background-image: url('./wooden-frame.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -22,4 +22,4 @@ canvas{
     display: block;
     margin: auto;
     
-}
+}*/
