--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,15 +1,9 @@
-body{
-  background-color: black;
-  min-height: 530px;
-}
 .App {
   text-align: center;
-  height: 100%; 
-  min-height: 530;
+  height: 100vh;
   background-image: url('./wooden-frame.jpg');
   background-position: center;
 }
-
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 60px;
@@ -21,61 +15,77 @@ body{
 
 .App-header {
   background-color: #333;
-  height: 60px;
 }
-.nav-toggle{
-  width: 100vw;
-  text-align: center;
+
+nav { 
   position: absolute;
-  
+  right: 0;
+  top: 1.3em;
+  text-align: right;
+  z-index: 20;
+} 
+nav .trigger{
+  margin: 1em;
 }
-.nav-toggle span{
-  
+nav a{
+  color: lawngreen;
 }
-.nav-toggle li{
+nav li{
+  border: solid 3px #333;
+  padding: 0.3em;
+  padding-left: 2em;
+  padding-right: 2em;
+}
+nav ul{
   display: none;
+  background: #777;
+  text-align: center;
+  padding: 0px;
+  border: solid 3px #333;
 }
-
-.trigger{
-  color: greenyellow;  
-}
-
-.App-body {
-  font-size: large;
-  height: 80vh; 
-  margin-bottom: 0px;
+nav:hover ul{
+  display: block;
 }
 .App-footer {
   background-color: black;
   color: ghostwhite;
-  display: block;
+  width: 100vw;
+  position: absolute;
+  bottom: 0px;
+  min-width: 300px;
 }
 
-/*@media screen and (min-width: 450px) { 
+@media screen and (min-width: 450px) { 
   .App {
     text-align: left;
   }
-  .App-header .nav-toggle { 
-    display: block; 
-    position: inherit; 
-    background: none; 
-  } 
-  .App-header .nav-toggle .trigger { 
-    display: none; 
-  } 
-  .App-header ul { 
-    display: block; 
-    position: inherit; 
-    background: none; 
-    z-index: 0; 
-    right: auto; 
-    min-width: none; 
-  } 
-  .App-header ul li { 
-    display: inline-block; 
-    color: #000; 
-  } 
-}*/
+  nav { 
+    position: absolute;
+    right: 0;
+    top: 0.3em;
+    text-align: right;
+    z-index: 20;
+  }
+  nav .trigger{
+    display: none;
+    margin: 1em;
+  }
+  nav ul{
+    display: block;
+    background: #777;
+    text-align: center;
+    padding: 0px;
+    border: solid 3px #333;
+  }
+  nav li{
+    display: inline;
+    border: solid 3px #333;
+    padding: 0.3em;
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+  
+}
 
 /*@media screen and (min-width: 550px) { 
   .App-body .img-focas { 
