--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100vh;
+}
+a{
+ text-decoration: none;
+}
+ul {
+  list-style-type: none;
 }
