--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,7 +2,10 @@
   text-align: center;
   height: 100vh;
   background-image: url('./wooden-frame.jpg');
-  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -15,6 +18,7 @@
 
 .App-header {
   background-color: #333;
+  border-radius: -20%;
 }
 
 nav { 
@@ -28,17 +32,30 @@ nav .trigger{
   margin: 1em;
 }
 nav a{
-  color: lawngreen;
+  display: block;
+  width: 100%; 
+  height: 100%;
 }
-nav li{
+nav li:hover{
+  display: block;
   border: solid 3px #333;
+  background: #999;
   padding: 0.3em;
   padding-left: 2em;
   padding-right: 2em;
+  transition: background 300ms;
+}
+nav li{
+  display: block;
+  border: solid 3px #333;
+  background: #777;
+  padding: 0.3em;
+  padding-left: 2em;
+  padding-right: 2em;
+  transition: background 300ms;
 }
 nav ul{
   display: none;
-  background: #777;
   text-align: center;
   padding: 0px;
   border: solid 3px #333;
