--- a/src/App/App.css
+++ b/src/App/App.css
@@ -32,12 +32,11 @@ nav .trigger{
   margin: 1em;
 }
 nav a{
-  display: block;
+  color: lawngreen;
   width: 100%; 
   height: 100%;
 }
 nav li:hover{
-  display: block;
   border: solid 3px #333;
   background: #999;
   padding: 0.3em;
