--- a/src/App/Body/body.css
+++ b/src/App/Body/body.css
@@ -18,13 +18,12 @@
     opacity: .5;
     padding: 1em;
     position: absolute;
-    width: 90%;
-    height: 100%;
-    max-width: 600px;
-    max-height: 80vh;
-    margin-left: 1em;
-    margin-right: 1em;
-    margin-top: 1em;
+    top: 5em;
+    right: 1em;
+    left: 1em;
+    bottom: 2em;
+    max-width: 700px;
+    margin: auto;
     border-radius: 1em;
     z-index: 1;
 }
@@ -32,11 +31,12 @@
     overflow-y:auto;
     opacity: 1;
     position: absolute;
-    max-width: 600px;
-    max-height: 80vh;
-    margin-left: 1em;
-    margin-right: 1em;
-    margin-top: 1em;
+    top: 4em;
+    right: 1em;
+    left: 1em;
+    bottom: 2em;
+    max-width: 700px;
+    margin: auto;
     border-radius: 1em;
     z-index: 5;
     color: lawngreen;
