--- a/src/Canvas/canvas.css
+++ b/src/Canvas/canvas.css
@@ -1,19 +1,24 @@
-/*.frame{
-    background-image: url('./wooden-frame.jpg');
+.frame{
+    background-image: url('./Fogged-Glass-With-Hand-Print.jpg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    position: absolute;
+    top: 5em;
+    left: 1em;
+    right: 1em;
+    bottom: 2.3em;
     padding: 1em;
     margin: auto;
-    margin-top: 1em;
     border-radius: 1em;
+    opacity: 0.8;
     z-index: 1;
 }
 
-canvas{
-    width: 100%;
+Canvas{
     z-index: 5;
+    border: 3px #060;
     border-radius: 1em;
 }
 .dots-inBoxes{
@@ -22,4 +27,4 @@ canvas{
     display: block;
     margin: auto;
     
-}*/
+}
