--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -1,22 +1,22 @@
 .form{
-    background: lightslategrey;
-    padding: 1em;
-    padding-top: .5em;
-    padding-bottom: .75em;
-    max-width: 42em;
+    text-align: center;
+    background: url('./ice.jpg');
+    position: absolute;
+    top: 5em;
+    left: 1em;
+    right: 1em;
+    bottom: 2em;
+    max-width: 16em;
     margin: auto;
-    margin-top: 1em;
-    border-radius: 10%;
+    border-radius: 2em;
+    scroll-behavior: auto;
 }
 input{
   background: indigo;
   border-radius: 20%;
   border: .2em solid #e8e8e8;
-  width: 95%;
+  max-width: 12em;
   height: 3em;
-  margin-top: .5em;
-  padding-left: 1em;
-  padding-right: 1em;
   box-sizing: border-box;
   color: snow;
 }
@@ -32,6 +32,29 @@ input{
     border: .2em dashed darkred;
 }
 .form li{
+    position: relative;
+    left: -1em;
     padding: 1em;
+}
+#tagImg{
+    background: url('./TagEx.png');
+    position: relative;
+    left:1em;
+    width: 9em;
+    height: 9em;
+}
+#boxImg{
+    background: url('./TagEx.png');
+    position: relative;
+    left:1em;
+    width: 9em;
+    height: 9em;
+}
+#lineImg{
+    background: url('./TagEx.png');
+    position: relative;
+    left:1em;
+    width: 9em;
+    height: 9em;
 }
 
