--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -1,6 +1,10 @@
 .form{
     text-align: center;
     background: url('./ice.jpg');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     position: absolute;
     top: 5em;
     left: 1em;
@@ -10,6 +14,7 @@
     margin: auto;
     border-radius: 2em;
     scroll-behavior: auto;
+    opacity: .8;
 }
 input{
   background: indigo;
@@ -38,23 +43,35 @@ input{
 }
 #tagImg{
     background: url('./TagEx.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     position: relative;
-    left:1em;
-    width: 9em;
+    left:.7em;
+    width: 10em;
     height: 9em;
 }
 #boxImg{
     background: url('./TagEx.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     position: relative;
-    left:1em;
-    width: 9em;
+    left:.7em;
+    width: 10em;
     height: 9em;
 }
 #lineImg{
-    background: url('./TagEx.png');
+    background: url('./LineCollorEx.png');
     position: relative;
-    left:1em;
+    left:1.3em;
     width: 9em;
     height: 9em;
+}
+.Canv{
+    position: relative;
+    left: -1em;
 }
 
