--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,9 +2,6 @@
   text-align: center;
   height: 100vh;
   background-image: url('./wooden-frame.jpg');
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
   background-size: cover;
 }
 .App-logo {
@@ -23,8 +20,8 @@
 
 nav { 
   position: absolute;
-  right: 0;
   top: 1.3em;
+  right: 0em;
   text-align: right;
   z-index: 20;
 } 
@@ -32,25 +29,21 @@ nav .trigger{
   margin: 1em;
 }
 nav a{
+  display: block;
   color: lawngreen;
-  width: 100%; 
-  height: 100%;
+}
+nav li a{
+  padding-left: 1em;
+  padding-right: 1em;
 }
 nav li:hover{
   border: solid 3px #333;
   background: #999;
-  padding: 0.3em;
-  padding-left: 2em;
-  padding-right: 2em;
   transition: background 300ms;
 }
 nav li{
-  display: block;
   border: solid 3px #333;
   background: #777;
-  padding: 0.3em;
-  padding-left: 2em;
-  padding-right: 2em;
   transition: background 300ms;
 }
 nav ul{
@@ -78,37 +71,33 @@ nav:hover ul{
   nav { 
     position: absolute;
     right: 0;
-    top: 0.3em;
+    top: -1em;
     text-align: right;
     z-index: 20;
   }
   nav .trigger{
     display: none;
-    margin: 1em;
   }
   nav ul{
     display: block;
-    background: #777;
     text-align: center;
     padding: 0px;
     border: solid 3px #333;
   }
-  nav li{
-    display: inline;
-    border: solid 3px #333;
-    padding: 0.3em;
-    padding-left: 2em;
-    padding-right: 2em;
+  nav a{
+    display: initial;
+    color: lawngreen;
+    padding-right: 1em;
+    padding-left: 1em;
   }
+  nav li{
+    display: inline-block;
+  }
+  
   
 }
 
-/*@media screen and (min-width: 550px) { 
-  .App-body .img-focas { 
-    width: 100%; 
-    margin: 0; 
-  } 
-}*/
+
 
 /*@media screen and (min-width: 800px) { 
   .App-body .img-focas { 
