--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -75,3 +75,10 @@ input{
     left: -1em;
 }
 
+@media screen and (min-width: 800px) { 
+    
+    .form li{
+        display: inline-block;
+    }
+
+} 
